# grownet

./: .clang-tidy  .eslintrc.cjs  .gitignore  .javac-sources.txt  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CMakePresets.json  Java_CPP_API_Diff_Report_v5.md  Makefile  PR_TOPOGRAPHIC_NOTES.md  README.md  README.txt  commit_message.txt  package.json  pixi.toml  pom.xml  resume.txt  tsconfig.base.json
.github/workflows/: contract-enforcement.yml  typescript-ci.yml
.idea.bak/: compiler.xml  misc.xml  modules.xml
GrowNet_PR_Starter_Kit/: 00_Messaging.md  01_PressRelease_Template.md  02_Pitches.md  03_Reporter_List.csv  04_Landing_Page_Copy.md  05_Social_Calendar_2w.md  06_Ad_Campaigns_Google_Ads.csv  07_Ad_Campaigns_Reddit_X_LinkedIn.md  08_Measurement_Plan.md  09_Launch_Checklist.md  10_HN_ShowHN_Post.md  11_Briefing_Doc_Template.md  12_ReadMe_Insert.md
JavaProject/GrowNet/: pom.xml
PR_Proximity_Autowiring_v2/docs/: ProximityPolicy.md
PR_Proximity_Autowiring_v2/integration/: snippet_cpp.txt  snippet_mojo.txt
codex/: MANIFEST.json
codex/cr/: CR-A-01-temporal-slotconfig.yaml  CR-A-02-neuron-focus-fields.yaml  CR-A-02-python-path-fix.yaml  CR-A-03-slotengine-anchor-logic.yaml  CR-A-04-growth-neuron.yaml  CR-A-04a-bootstrap-growth.yaml  CR-A-05-tests.yaml  CR-B-01-spatial-focus.yaml  CR-B-02-tests.yaml  CR-BOOT.yaml  PHASE_A.yaml  PHASE_B.yaml
codex/docs/: CONTEXT_GrowNet_Vision.md  INTERPRETATION_GUIDE.md  ONBOARDING.md
codex/scripts/: apply_phase_a.sh  apply_phase_b.sh
config/: checkstyle.xml
cpp_region_metrics_patch/: RegionMetrics.h
demos/configs/: growth_or_trigger_demo.json
docs/: 2D_Bins.md  ANCHOR_GUIDELINES.md  API_DIFF_PY_MOJO.md  BENCHMARKS.md  BOOTSTRAP_PROMPT.md  CODING_STYLE_MUST_READ.md  CONTRIBUTING.md  DEMO_RUN.md  DEV_CodexWeb.md  DOCS_INDEX.md  FAQ.md  FOCUS_AND_GROWTH_CHEATSHEET.md  GLOSSARY.md  GROWTH.md  GrowNet_Chat_Thread_2.md  GrowNet_Chat_Thread_3.md  GrowNet_Contract_v5_master.yaml  GrowNet_Design Spec_V3.md  GrowNet_Design_Spec.txt  GrowNet_Design_Spec_V5.md  GrowNet_Original_Chat_Thread_1.md  GrowNet_Overview.md  GrowNet_Quick_Start_for_Engineers.md  GrowNet_Theory_of_Change.md  GrowNet_Tutorial.md  GrowNet_in_Plain_Language.md  KU_BKU_Evaluation_Protocol.md  Mapping_Brain_Development_Sketch_to_GrowNet.md  Memory_Prompt.md  Neuron_patch_note.txt  OneDimSlotDemo.txt  PAL_README.md  PATCH_NOTES_CPP.md  PATCH_NOTES_JAVA.md  PROJECT_MEMORY.md  PR_Proximity_AutoWiring.md  PR_focus_phase_a_apply.md  PR_focus_phase_a_retry.md  PRs_windowed_wiring_and_more.md  README.md  (+15 more)
docs/NeurIPS/: Related Work on Constructive and Dynamic Neural Architectures.docx
docs/PRs/: FAQ.md  MOJO_MIGRATION_REPORT.json  PATCH_NOTES_PYTHON.md  PR_14.md  PR_15.md  PR_AB.md  PR_Auto_Growth_Readiness_Close‑Out.md  PR_DESCRIPTION.md  (+15 more)
docs_old/: BOOTSTRAP_PROMPT.md  CREATION_AND_GROWTH_POINTS.md  FAQ.md  GLOSSARY.md  GOLDEN_RULE.md  GROWTH_CHEATSHEET.md  Golden Rule_What_it_Is.md  GrowNet_API_One_Pager.md  GrowNet_Contract_v5_master.yaml  GrowNet_Debugging.md  GrowNet_Design_Spec_V4.md  GrowNet_Field_Guide_v3.md  GrowNet_Glossary_v3.1.md  GrowNet_Golden_Rule_In_Plain_English.md  GrowNet_Overview.md  GrowNet_Topographic_Wiring.md  GrowNet_Tutorial.md  GrowNet_in_Plain_Language_v2.md  Knowledge_Units_in_GrowNet.md  OneDimSlotDemo.txt  PAL_Codex_Output.txt  PROJECT_MEMORY.md  PR_Automatic_Growth.md  PR_Proximity_Autowrie_Master.md  Parallelism_Concurrency_Abstraction.md  READFME_GrowNet_Attribution_Guildelines.md  README_DeepResearch.md  README_ONIO.md  README_PR.md  READ_ORDER.md  READ_ORDER_PATCH.diff  SPATIAL_FOCUS.md  SpatialFocusPR.md  Spatial_Focus_Patch.md  The_conditions_of_growth_in_simple_terms_for_all_parts.md  What_this_codebase_is_about.md  introducing_parallelism_concurrency_in_grownet.md
grownet-ts-parity-pr/: README_APPLY.md
images/: retina_single_rgc_maxfanout_targets.csv
integration/: snippet_java.txt  snippet_python.txt
keys/: github_k.txt
mojo/: input_layer_2d.mojo  input_neuron.mojo  output_layer_2d.mojo  output_neuron.mojo
scripts/: API_DIFF_PY_MOJO.md  API_DIFF_REPORT.md  api_diff_grownet.py  api_diff_py_mojo.py  detect_single_double_variable_char_names.py  doc_audit.py  run_mojo_tests.sh  run_stress_bench.sh  run_tests_codex_web.sh
src/: java
src/cpp/: CMakeLists.txt  DemoMain.cpp  ExcitatoryNeuron.cpp  ExcitatoryNeuron.h  FireHook.h  Forward.h  GrowthPolicy.h  ImageIODemo.cpp  InhibitoryNeuron.cpp  InhibitoryNeuron.h  InputLayer2D.h  InputLayerND.h  InputNeuron.h  LateralBus.cpp  LateralBus.h  Layer.cpp  Layer.h  MathUtils.cpp  MathUtils.h  ModulatoryNeuron.cpp  ModulatoryNeuron.h  Neuron.cpp  Neuron.h  OutputLayer2D.h  OutputNeuron.h  README_CPP.txt  Region.cpp  Region.h  RegionBus.cpp  RegionBus.h  RegionDemo.cpp  SlotConfig.h  SlotEngine.cpp  SlotEngine.h  SlotPolicy.h  SlotPolicyConfig.h  Synapse.cpp  Synapse.h  Tract.cpp  Tract.h  (+4 more)
src/cpp/bench/: bench_main.cpp
src/cpp/demo/: DemoWindowedParity.cpp  DemoWindowedUniqueSources.cpp  demo_windowed_parity.cpp  demo_windowed_unique_sources.cpp  region_demo.cpp
src/cpp/include/: DeterministicLayout.h  ProximityConfig.h  ProximityEngine.h  SpatialHash.h  TopographicWiring.h  TractWindowed.h
src/cpp/include/grownet/pal/: Pal.h
src/cpp/src/: ProximityEngine.cpp  TopographicWiring.cpp  TractWindowed.cpp
src/cpp/tests/: DisabledProximityStep.cpp  EdgeEnumerationTest.cpp  GrowthSmoke.cpp  LateralBusDecayTests.cpp  OneGrowthPerTick.cpp  PalDeterminismTest.cpp  RegionGrowthOrTriggerTest.cpp  RegionPulseAndBindingTests.cpp  RegionTickTests.cpp  StressHdImageTick.cpp  StressRetinaHdImageTick.cpp  WindowedWiringCenterTest.cpp  WindowedWiringSmoke.cpp  disabled_proximity_step.cpp  edge_enumeration_test.cpp  growth_guards_test.cpp  nd_tick_smoke.cpp  pal_determinism_test.cpp  proximity_step_test.cpp  region_growth_or_trigger_test.cpp  region_pulse_and_binding_tests.cpp  region_tick_tests.cpp  slot_unfreeze_2d_prefer_once_test.cpp  spatial_metrics_public_test.cpp  stress_hd_image_tick.cpp  stress_retina_hd_image_tick.cpp  windowed_reattach_test.cpp
tests/: test_slots.py
(+787 files in other folders)
